tests/paczka1/fuzzy1/44285630.err
Error in line 2: dsEwORrgYRN S215 68,2
Error in line 3: dsEwORrgYRN S48 10,1
Error in line 5: S48 S215 17,2
Error in line 13: t8LSph A81 79,8
Error in line 23: t8LSph S463 45,8
Error in line 31: MMWDRT S48 7;,7
Error in line 29: MMWDRT A81 57,0
